--- a/finanzas-ui/src/app/auth/login-register.component.html
+++ b/finanzas-ui/src/app/auth/login-register.component.html
@@ -17,11 +17,11 @@
           </mat-form-field>
           <mat-form-field appearance="fill">
             <mat-label>Password</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+            <input matInput [type]="hide ? 'password' : 'text'" formControlName="passwordHash">
             <button mat-icon-button matSuffix type="button" (click)="hide = !hide">
               <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
-            <mat-error *ngIf="registerForm.get('password')?.invalid">Mínimo 6 caracteres</mat-error>
+            <mat-error *ngIf="registerForm.get('passwordHash')?.invalid">Mínimo 6 caracteres</mat-error>
           </mat-form-field>
           <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid">Crear cuenta</button>
         </form>
