--- a/finanzas-ui/src/app/debts/debts-list/debts-list.component.html
+++ b/finanzas-ui/src/app/debts/debts-list/debts-list.component.html
@@ -8,6 +8,9 @@
       <a mat-raised-button color="primary" routerLink="/deudas/nueva">
         <mat-icon>add</mat-icon> Nueva deuda
       </a>
+      <button mat-raised-button color="primary" type="button" (click)="exportarDeudas()">
+        <mat-icon>download</mat-icon> Exportar CSV
+      </button>
     </div>
   </div>
 
