--- a/finanzas-ui/src/app/debts/debts-list/debts-list.component.html
+++ b/finanzas-ui/src/app/debts/debts-list/debts-list.component.html
@@ -59,6 +59,7 @@
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let d">
           <a mat-button [routerLink]="['/deudas', d.deudaId]">Ver</a>
+          <button *ngIf="d.estado === 'Pendiente'" mat-raised-button color="accent" style="margin-left:8px;" (click)="registrarPago(d.deudaId)">Registrar pago</button>
         </td>
       </ng-container>
 
